mvncelesta/target/generated-sources/javacc/ru/curs/celesta/score/CelestaParser.java
/* Generated By:JavaCC: Do not edit this line. CelestaParser.java */
package ru.curs.celesta.score;

import java.util.List;
import java.util.ArrayList;
import java.io.StringReader;
import ru.curs.celesta.CelestaException;

//CHECKSTYLE:OFF
public class CelestaParser implements CelestaParserConstants {
    public static Expr parseComplexFilter(String filter) throws CelestaException {
         StringReader sr = new StringReader(filter);
         try {
                 CelestaParser parser = new CelestaParser(sr);
                 try {
                      return parser.sqlExpression();
                 } catch (ParseException e) {
                    throw new CelestaException("Invalid complex filter '%s': %s", filter, e.getMessage());
                 }
     } finally {
         sr.close();
     }
   }

/*Metamodel. Root rule.*/
  final public Grain grain(Score s, String name) throws ParseException {
   /*This work is dedicated to Maria, my misterious muse :-) 
     Ivan Ponomarev, June 2013.*/

   Grain g = new Grain(s, name);
   Token t;
   Token doc = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CELESTA_DOC:
      doc = jj_consume_token(CELESTA_DOC);
                         g.setCelestaDocLexem(doc.toString()); doc = null;
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    jj_consume_token(K_CREATE);
    t = jj_consume_token(S_IDENTIFIER);
                       if (!"GRAIN".equalsIgnoreCase(t.toString()))
      {if (true) throw new ParseException(String.format(
          "Error: expected 'create GRAIN' at the beginning of the grain '%s' definition.", name));}
    t = jj_consume_token(S_IDENTIFIER);
                       if (!name.equalsIgnoreCase(t.toString())) {if (true) throw new ParseException(String.format(
      "Error: expected 'create grain %s' at the beginning of the grain '%s' definition, found '%s'.", name, name, t.toString()));}
    t = jj_consume_token(S_IDENTIFIER);
                       if (!"VERSION".equalsIgnoreCase(t.toString())) {if (true) throw new ParseException(String.format(
      "Error: expected 'create grain %s VERSION' at the beginning of the grain '%s' definition.", name, name));}
    t = jj_consume_token(S_CHAR_LITERAL);
                         g.setVersion(t.toString());
    jj_consume_token(64);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_CREATE:
      case K_ALTER:
      case CELESTA_DOC:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_CREATE:
      case CELESTA_DOC:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CELESTA_DOC:
          doc = jj_consume_token(CELESTA_DOC);
          break;
        default:
          jj_la1[2] = jj_gen;
          ;
        }
        jj_consume_token(K_CREATE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_TABLE:
          createTable(g, doc == null? null: doc.toString());
          break;
        case K_INDEX:
          createIndex(g, doc == null? null: doc.toString());
          break;
        case K_VIEW:
          createView(g, doc == null? null: doc.toString());
          break;
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                                                                        doc = null;
        break;
      case K_ALTER:
        jj_consume_token(K_ALTER);
        alterTable(g);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(64);
    }
    jj_consume_token(0);
   g.completeParsing();
   {if (true) return g;}
    throw new Error("Missing return statement in function");
  }

  final public void createTable(Grain g, String doc) throws ParseException {
        Table table = null;
        Token t = null;
    List<String> options = new ArrayList<String>(5);
    jj_consume_token(K_TABLE);
    t = jj_consume_token(S_IDENTIFIER);
                            table = new Table(g, t.toString());
                                    table.setCelestaDocLexem(doc);
    jj_consume_token(65);
    tableConstituent(table);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 66:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      jj_consume_token(66);
      tableConstituent(table);
    }
    jj_consume_token(67);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_NO:
    case S_IDENTIFIER:
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case S_IDENTIFIER:
          t = jj_consume_token(S_IDENTIFIER);
          break;
        case K_NO:
          t = jj_consume_token(K_NO);
          break;
        default:
          jj_la1[6] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
                                          options.add(t.toString());
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_NO:
        case S_IDENTIFIER:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_3;
        }
      }
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
          table.finalizePK(options);
  }

  final public void tableConstituent(Table table) throws ParseException {
  String name;
  ForeignKey fk;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case S_IDENTIFIER:
    case CELESTA_DOC:
      columnDefinition(table);
      break;
    case K_PRIMARY:
    case K_FOREIGN:
    case K_CONSTRAINT:
      name = constraint(table.getGrain());
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_PRIMARY:
        primaryKey(table);
                             table.setPkConstraintName(name);
        break;
      case K_FOREIGN:
        fk = foreignKey(table);
                                  fk.setConstraintName(name);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void columnDefinition(Table table) throws ParseException {
   Column column = null;
   Token t;
   Token length = null;
   boolean nullable;
   boolean negative = false;
   boolean pk = false;
   ForeignKey fk = null;
   String name;
   Token doc = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CELESTA_DOC:
      doc = jj_consume_token(CELESTA_DOC);
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    t = jj_consume_token(S_IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_INT:
      jj_consume_token(K_INT);
                       column = new IntegerColumn(table, t.toString()); t = null;
      nullable = nullable();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_DEFAULT:
      case K_IDENTITY:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_DEFAULT:
          jj_consume_token(K_DEFAULT);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case 68:
            jj_consume_token(68);
                                                         negative = true;
            break;
          default:
            jj_la1[12] = jj_gen;
            ;
          }
          t = jj_consume_token(S_INTEGER);
          break;
        case K_IDENTITY:
          t = jj_consume_token(K_IDENTITY);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case K_NOT:
            jj_consume_token(K_NOT);
            jj_consume_token(K_NULL);
                                                                                                                                  nullable = false;
            break;
          default:
            jj_la1[13] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      break;
    case K_REAL:
      jj_consume_token(K_REAL);
                       column = new FloatingColumn(table, t.toString()); t = null;
      nullable = nullable();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_DEFAULT:
        jj_consume_token(K_DEFAULT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 68:
          jj_consume_token(68);
                                     negative = true;
          break;
        default:
          jj_la1[16] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case S_INTEGER:
          t = jj_consume_token(S_INTEGER);
          break;
        case S_DOUBLE:
          t = jj_consume_token(S_DOUBLE);
          break;
        default:
          jj_la1[17] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[18] = jj_gen;
        ;
      }
      break;
    case K_VARCHAR:
      jj_consume_token(K_VARCHAR);
                     column = new StringColumn(table, t.toString()); t = null;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 65:
        jj_consume_token(65);
        length = jj_consume_token(S_INTEGER);
        jj_consume_token(67);
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
                           ((StringColumn) column).setLength(length.toString());
      nullable = nullable();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_DEFAULT:
        jj_consume_token(K_DEFAULT);
        t = jj_consume_token(S_CHAR_LITERAL);
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
      break;
    case K_TEXT:
      jj_consume_token(K_TEXT);
                  column = new StringColumn(table, t.toString());
                      ((StringColumn) column).setLength("MAX");
                                  t = null;
      nullable = nullable();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_DEFAULT:
        jj_consume_token(K_DEFAULT);
        t = jj_consume_token(S_CHAR_LITERAL);
        break;
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      break;
    case K_BLOB:
      jj_consume_token(K_BLOB);
                      column = new BinaryColumn(table, t.toString()); t = null;
      nullable = nullable();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_DEFAULT:
        jj_consume_token(K_DEFAULT);
        t = jj_consume_token(S_BINARY_LITERAL);
        break;
      default:
        jj_la1[22] = jj_gen;
        ;
      }
      break;
    case K_DATETIME:
      jj_consume_token(K_DATETIME);
                       column = new DateTimeColumn(table, t.toString()); t = null;
      nullable = nullable();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_DEFAULT:
        jj_consume_token(K_DEFAULT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case S_CHAR_LITERAL:
          t = jj_consume_token(S_CHAR_LITERAL);
          break;
        case K_GETDATE:
          t = jj_consume_token(K_GETDATE);
          jj_consume_token(65);
          jj_consume_token(67);
          break;
        default:
          jj_la1[23] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[24] = jj_gen;
        ;
      }
      break;
    case K_BIT:
      jj_consume_token(K_BIT);
                       column = new BooleanColumn(table, t.toString()); t = null;
      nullable = nullable();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_DEFAULT:
        jj_consume_token(K_DEFAULT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case S_CHAR_LITERAL:
          t = jj_consume_token(S_CHAR_LITERAL);
          break;
        case S_INTEGER:
          t = jj_consume_token(S_INTEGER);
          break;
        case K_FALSE:
          t = jj_consume_token(K_FALSE);
          break;
        case K_TRUE:
          t = jj_consume_token(K_TRUE);
          break;
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[26] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[27] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    name = constraint(table.getGrain());
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_PRIMARY:
      jj_consume_token(K_PRIMARY);
      jj_consume_token(K_KEY);
               pk = true; table.setPkConstraintName(name);
      name = constraint(table.getGrain());
      break;
    default:
      jj_la1[28] = jj_gen;
      ;
    }
      column.setNullableAndDefault(nullable, t == null? null: ((negative? "-": "") + t.toString()));
          column.setCelestaDocLexem(doc == null? null:doc.toString());
          if (pk) {
            table.addPK(column.getName());
            table.finalizePK();
          }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_FOREIGN:
      jj_consume_token(K_FOREIGN);
      jj_consume_token(K_KEY);
                              fk = new ForeignKey(table); fk.addColumn(column.getName()); fk.setConstraintName(name);
      references(fk);
      break;
    default:
      jj_la1[29] = jj_gen;
      ;
    }
  }

  final public boolean nullable() throws ParseException {
  boolean result = true;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_NOT:
    case K_NULL:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_NULL:
        jj_consume_token(K_NULL);
                   result = true;
        break;
      case K_NOT:
        jj_consume_token(K_NOT);
        jj_consume_token(K_NULL);
                                                      result = false;
        break;
      default:
        jj_la1[30] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[31] = jj_gen;
      ;
    }
                                                                          {if (true) return result;}
    throw new Error("Missing return statement in function");
  }

  final public void primaryKey(Table table) throws ParseException {
                              Token t;
    jj_consume_token(K_PRIMARY);
    jj_consume_token(K_KEY);
    jj_consume_token(65);
    t = jj_consume_token(S_IDENTIFIER);
                                              table.addPK(t.toString());
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 66:
        ;
        break;
      default:
        jj_la1[32] = jj_gen;
        break label_4;
      }
      jj_consume_token(66);
      t = jj_consume_token(S_IDENTIFIER);
                                              table.addPK(t.toString());
    }
    jj_consume_token(67);
    table.finalizePK();
  }

  final public ForeignKey foreignKey(Table table) throws ParseException {
  Token t;
  ForeignKey fk;
    jj_consume_token(K_FOREIGN);
    jj_consume_token(K_KEY);
                     fk = new ForeignKey(table);
    jj_consume_token(65);
    t = jj_consume_token(S_IDENTIFIER);
                           fk.addColumn(t.toString());
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 66:
        ;
        break;
      default:
        jj_la1[33] = jj_gen;
        break label_5;
      }
      jj_consume_token(66);
      t = jj_consume_token(S_IDENTIFIER);
                           fk.addColumn(t.toString());
    }
    jj_consume_token(67);
    references(fk);
